# src/main/java/cn/sduonline/join/data/dto/DepartmentVO.java
@@ -33,7 +33,6 @@ public record DepartmentVO(
         String recruitmentRequirements,
         String contact,
         String recruitmentGroup,
-        Boolean qrCheckInEnabled,
         boolean hasQuestionnaire,
         boolean canManage,
         Integer sortOrder,
@@ -67,7 +66,6 @@ public record DepartmentVO(
                 department.getRecruitmentRequirements(),
                 department.getContact(),
                 department.getRecruitmentGroup(),
-                department.getQrCheckInEnabled(),
                 hasQuestionnaire,
                 canManage,
                 department.getSortOrder(),
